User API update
